# ecam

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/ex1/: CMakeLists.txt  ex1.cc
examples/ex2/: CMakeLists.txt  ex2.cc
examples/ex3/: CMakeLists.txt  ex3.cc
examples/ex5/: CMakeLists.txt  ex5.cc  player.cc  player.h
libecam/: CMakeLists.txt
libecam/include/ecam/: camera.h  capabilities.h  config.h  decoder.h  frame.h  localcamera.h  processor.h  remotecamera.h  thread.h
libecam/src/: camera.cc  capabilities.cc  config.cc  frame.cc  localcamera.cc  thread.cc
